src/objects/Solution_Project_Template__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Solution Project Templates</relationshipLabel>
        <relationshipName>Solution_Project_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>pse__Proj__c.pse__Is_Template__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Solution Project Templates</relationshipLabel>
        <relationshipName>Solution_Project_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Template</label>
        <referenceTo>Solution__c</referenceTo>
        <relationshipLabel>Solution Project Templates</relationshipLabel>
        <relationshipName>Solution_Project_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Solution Project Template</label>
    <nameField>
        <displayFormat>SPT-{00000}</displayFormat>
        <label>Solution Project Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solution Project Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>